--- a/Mission to Mars_Challenge.ipynb
+++ b/Mission to Mars_Challenge.ipynb
@@ -170,7 +170,7 @@
     {
      "data": {
       "text/plain": [
-       "'image/featured/mars2.jpg'"
+       "'image/featured/mars3.jpg'"
       ]
      },
      "execution_count": 11,
@@ -192,7 +192,7 @@
     {
      "data": {
       "text/plain": [
-       "'https://data-class-jpl-space.s3.amazonaws.com/JPL_Space/image/featured/mars2.jpg'"
+       "'https://data-class-jpl-space.s3.amazonaws.com/JPL_Space/image/featured/mars3.jpg'"
       ]
      },
      "execution_count": 12,
@@ -1665,16 +1665,7 @@
    "cell_type": "code",
    "execution_count": 31,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/asaholley/opt/anaconda3/lib/python3.8/site-packages/splinter/driver/webdriver/__init__.py:498: FutureWarning: browser.find_link_by_text is deprecated. Use browser.links.find_by_text instead.\n",
-      "  warnings.warn(\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# 2. Create a list to hold the images and titles.\n",
     "hemisphere_image_urls = []\n",
@@ -1682,14 +1673,13 @@
     "# 3. Write code to retrieve the image urls and titles for each hemisphere.\n",
     "html=browser.html\n",
     "soup_1=soup(html, 'html.parser')\n",
-    "main_hem_url= \"https://astrogeology.usgs.gov\"\n",
     "hemisphere= soup_1.find_all(\"div\", class_=\"item\")\n",
     "hemisphere_image_urls = []\n",
     "links = browser.find_by_css(\"a.product-item h3\")\n",
     "for item in range(len(links)):\n",
     "    hemisphere = {}\n",
     "    browser.find_by_css(\"a.product-item h3\")[item].click()\n",
-    "    sample_element = browser.find_link_by_text(\"Sample\").first\n",
+    "    sample_element = browser.links.find_by_text(\"Sample\").first\n",
     "    hemisphere[\"img_url\"] = sample_element[\"href\"]\n",
     "    hemisphere[\"title\"] = browser.find_by_css(\"h2.title\").text\n",
     "    hemisphere_image_urls.append(hemisphere)\n",
